fix: implement suggested changes